--- a/config/thin.yml
+++ b/config/thin.yml
@@ -1,10 +1,9 @@
 ---
 user: grit 
-group: web
+group: web 
 environment: development 
 timeout: 30
 wait: 30
-port: 3000
 log: log/thin.log
 chdir: /var/www/haveyourdessert/
 max_conns: 1024
@@ -15,6 +14,6 @@ servers: 3
 daemonize: true
 no-epoll: true
 pid: tmp/pids/thin.pid
-#socket: tmp/thin.sock
+socket: tmp/thin.sock
 tag: thin-server
 
